%% Diagram 6 — Model Lifecycle (ModelRegistry state machine)
stateDiagram-v2
    [*] --> TRAINING
    TRAINING --> VALIDATING
    VALIDATING --> CANDIDATE
    CANDIDATE --> STAGED
    STAGED --> PRODUCTION: promote() — explicit, evaluated decision
    VALIDATING --> REJECTED: metrics worse than current production
    CANDIDATE --> REJECTED
    STAGED --> REJECTED
    PRODUCTION --> ARCHIVED: superseded by a later promotion
    PRODUCTION --> PRODUCTION: rollback() to a prior validated version
    REJECTED --> [*]
    ARCHIVED --> [*]

    note right of PRODUCTION
        A model is NEVER auto-promoted
        merely because training finished.
        See Task 2 §26-27.
    end note
